# microservices

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
api_spec/: alpha_centauri.json
django/: .env.local  Dockerfile
django/requirements/: base.txt
django/src/app/: asgi.py  settings.py  urls.py  views.py  wsgi.py
django/src/different_urls_file_name/: apps.py
django/src/different_urls_file_name/api/: endpoints.py  views.py
django/src/included_urls/: apps.py  urls.py  views.py
django/src/not_included/: apps.py  urls.py  views.py
django/src/rest/: models.py  serializers.py  urls.py  views.py
django/src/rest/migrations/: 0001_initial.py
django/src/rest_router/: apps.py  urls.py  views.py
haproxy/: Dockerfile  haproxy.cfg
haproxy/cert/: cert.pem  generate-cert.sh  haproxy.pem  key.pem
microservices/alpha_centauri/: service.py
microservices/alpha_centauri/common/: router.py  some.py
microservices/alpha_centauri/configuration/: app.py
microservices/alpha_centauri/proxima_centauri/: details.py  router.py
microservices/alpha_centauri/rigil_kentaurus/: details.py  router.py
microservices/alpha_centauri/toliman/: router.py
microservices/mira/: app.py  blueprint_created_by_builder_direct_import.py  common.py
microservices/mira/mira_a/: router.py
microservices/mira/mira_b/: router.py
microservices/observer/: service.py
microservices/observer/configuration/: app.py
mocks/: Dockerfile  README.md  pyproject.toml
mocks/mocks/: __init__.py  service.py
mocks/mocks/configuration/: app.py
