[tool.poetry]
name = "microservices"
version = "0.1.0"
description = "Various microservice examples"
authors = ["Vitaly Legchilkin <vlegchilkin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mscom = { version = "^0.1.5", source = "local" }
uvicorn = { version = "^0.25.0", source = "pypi"}

[tool.poetry.dev-dependencies]
pre-commit = { version = "^3.5.0", source = "pypi" }
black = { extras = ["d"], version = "*", source = "pypi" }
coverage = { version = "^7.3.2", source = "pypi" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.pytest.ini_options]
python_files = "*.py"
python_functions = "test_*"
addopts = "--ignore=utils --color=yes -s"
log_cli = "true"
log_cli_level = "debug"
log_format = "%(asctime)s | %(levelname)-7s | [%(name)s] %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
junit_family = "xunit1"
#asyncio_mode = "auto"

[[tool.poetry.source]]
name = "local"
url = "http://127.0.0.1:3141/root/local/+simple"
priority = "explicit"
